--- a/tambahkan-db-diskon.html
+++ b/tambahkan-db-diskon.html
@@ -45,6 +45,21 @@
         </ul>
         <!-- toggle menu -->
         <i class="fa-solid fa-bars-staggered toggle-menu" onclick="openNavlink()"></i>
+        <!-- side navlink -->
+        <ul class="navlink side-navlink">
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="about.html">Tentang</a></li>
+            <li class="dropdown">
+                <a href="#!">Hitung Diskon <i class="fa-solid fa-chevron-right"></i></a>
+                <!-- dropdown list -->
+                <ul class="dropdown-list">
+                    <li><a href="tambahkan-diskon.html">Tambahkan Diskon</a></li>
+                    <li><a href="tambahkan-db-diskon.html">Tambahkan Double Diskon</a></li>
+                    <li><a href="kurangi-diskon.html">Kurangi Diskon</a></li>
+                    <li><a href="kurangi-db-diskon.html">Kurangi Double Diskon</a></li>
+                </ul>
+            </li>
+        </ul>
     </nav>
 
     <!-- jumbotron -->
