mengubah tipe input dan membuat autoselect

--- a/kurangi-db-diskon.html
+++ b/kurangi-db-diskon.html
@@ -82,16 +82,16 @@
             <form id="form">
                 <span class="input-group">
                     <label for="price"><small>Masukkan harga awal:</small></label>
-                    <input type="text" name="price" id="price" placeholder="Contoh: 100000" autocomplete="off"
+                    <input type="number" name="price" id="price" placeholder="Contoh: 100000" autocomplete="off"
                         autofocus>
                 </span>
                 <span class="input-group">
                     <label for="discount-1"><small>Masukkan nilai diskon pertama:</small></label>
-                    <input type="text" name="discount" id="discount-1" placeholder="Contoh: 25" autocomplete="off">
+                    <input type="number" name="discount" id="discount-1" placeholder="Contoh: 25" autocomplete="off">
                 </span>
                 <span class="input-group">
                     <label for="discount-2"><small>Masukkan nilai diskon kedua:</small></label>
-                    <input type="text" name="discount" id="discount-2" placeholder="Contoh: 20" autocomplete="off">
+                    <input type="number" name="discount" id="discount-2" placeholder="Contoh: 20" autocomplete="off">
                 </span>
                 <button type="submit"><i class="fa-solid fa-calculator"></i> Hitung</button>
             </form>
