--- a/kurangi-diskon.html
+++ b/kurangi-diskon.html
@@ -81,12 +81,12 @@
             <form id="form">
                 <span class="input-group">
                     <label for="price"><small>Masukkan harga awal:</small></label>
-                    <input type="text" name="price" id="price" placeholder="Contoh: 100000" autocomplete="off"
+                    <input type="number" name="price" id="price" placeholder="Contoh: 100000" autocomplete="off"
                         autofocus>
                 </span>
                 <span class="input-group">
                     <label for="discount"><small>Masukkan nilai diskon:</small></label>
-                    <input type="text" name="discount" id="discount" placeholder="Contoh: 25" autocomplete="off">
+                    <input type="number" name="discount" id="discount" placeholder="Contoh: 25" autocomplete="off">
                 </span>
                 <button type="submit"><i class="fa-solid fa-calculator"></i> Hitung</button>
             </form>
