--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                     <li><a href="tambahkan-db-diskon.html">Tambahkan Double Diskon</a></li>
                     <li><a href="kurangi-diskon.html">Kurangi Diskon</a></li>
                     <li><a href="kurangi-db-diskon.html">Kurangi Double Diskon</a></li>
+                    <li><a href="https://dediindrawan.github.io/kalkulator-online/"><span>New!</span>Kalkulator
+                            Online</a></li>
                 </ul>
             </li>
         </ul>
@@ -41,6 +43,7 @@
         <ul class="navlink side-navlink">
             <li><a href="">Beranda</a></li>
             <li><a href="about.html">Tentang</a></li>
+            <li><a href="https://dediindrawan.github.io/kalkulator-online/"><span>New!</span>Kalkulator Online</a></li>
             <li class="dropdown">
                 <a href="#!">Hitung Diskon <i class="fa-solid fa-chevron-right"></i></a>
                 <!-- dropdown list -->
@@ -166,6 +169,7 @@
                 <li><a href="tambahkan-db-diskon.html">Tambahkan Double Diskon</a></li>
                 <li><a href="kurangi-diskon.html">Kurangi Diskon</a></li>
                 <li><a href="kurangi-db-diskon.html">Kurangi Double Diskon</a></li>
+                <li><a href="https://dediindrawan.github.io/kalkulator-online/"><span>New!</span>Kalkulator Online</a></li>
             </ul>
         </div>
         <div class="social-media">
