--- a/kurangi-diskon.html
+++ b/kurangi-diskon.html
@@ -38,6 +38,7 @@
                     <li><a href="tambahkan-db-diskon.html">Tambahkan Double Diskon</a></li>
                     <li><a href="kurangi-diskon.html">Kurangi Diskon</a></li>
                     <li><a href="kurangi-db-diskon.html">Kurangi Double Diskon</a></li>
+                    <li><a href="https://dediindrawan.github.io/kalkulator-online/"><span>New!</span>Kalkulator Online</a></li>
                 </ul>
             </li>
         </ul>
@@ -47,6 +48,7 @@
         <ul class="navlink side-navlink">
             <li><a href="index.html">Beranda</a></li>
             <li><a href="about.html">Tentang</a></li>
+            <li><a href="https://dediindrawan.github.io/kalkulator-online/"><span>New!</span>Kalkulator Online</a></li>
             <li class="dropdown">
                 <a href="#!">Hitung Diskon <i class="fa-solid fa-chevron-right"></i></a>
                 <!-- dropdown list -->
@@ -124,6 +126,7 @@
                 <li><a href="tambahkan-db-diskon.html">Tambahkan Double Diskon</a></li>
                 <li><a href="kurangi-diskon.html">Kurangi Diskon</a></li>
                 <li><a href="kurangi-db-diskon.html">Kurangi Double Diskon</a></li>
+                <li><a href="https://dediindrawan.github.io/kalkulator-online/"><span>New!</span>Kalkulator Online</a></li>
             </ul>
         </div>
         <div class="social-media">
